--- a/client/src/App.css
+++ b/client/src/App.css
@@ -39,8 +39,8 @@
 .complete-website{
   overflow-x: hidden;
   min-height: 86vh;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  /* width: 70%; */
+  /* display: flex; */
+  /* justify-content: center; */
+  /* align-items: center; */
 }
