--- a/client/src/Pages/Groups/group.css
+++ b/client/src/Pages/Groups/group.css
@@ -1,32 +1,10 @@
 :root {
     --body-bg: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
     --msger-bg: #fff;
-    --border: 2px solid #ddd;
+    /* --border: 2px solid #ddd; */
     --left-msg-bg: #ececec;
     --right-msg-bg: #579ffb;
   }
-  
-  /* html {
-    box-sizing: border-box;
-  } */
-/*   
-  *,
-  *:before,
-  *:after {
-    margin: 0;
-    padding: 0;
-    box-sizing: inherit;
-  } */
-/*   
-  body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    background-image: var(--body-bg);
-    font-family: Helvetica, sans-serif;
-  }
-   */
   .msger {
     /* width: 20%; */
     /* display: flex; */
@@ -46,7 +24,7 @@
     justify-content: space-between;
     padding: 10px;
     border-bottom: var(--border);
-    background: #eee;
+    /* background: #eee; */
     color: #666;
   }
   .max-chat-size{
@@ -131,7 +109,7 @@
     display: flex;
     padding: 10px;
     border-top: var(--border);
-    background: #eee;
+    background: #333333;
   }
   .msger-inputarea * {
     padding: 10px;
@@ -141,7 +119,7 @@
   }
   .msger-input {
     flex: 1;
-    background: #ddd;
+    background: #999;
   }
   .msger-send-btn {
     margin-left: 10px;
@@ -159,6 +137,318 @@
     background-color: #fcfcfe;
   }
   
-  /* .msg{
-    margin: 120px;
-  } */
+
+.ag-format-container {
+  width: 1142px;
+  margin: 0 auto;
+}
+div{
+  text-decoration: none;
+}
+.ag-courses_box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  padding: 50px 0;
+}
+.ag-courses_item {
+  -ms-flex-preferred-size: calc(33.33333% - 30px);
+  flex-basis: calc(33.33333% - 30px);
+
+  margin: 0 15px 30px;
+
+  overflow: hidden;
+
+  border-radius: 28px;
+}
+.ag-courses-item_link {
+  display: block;
+  padding: 30px 20px;
+  background-color: #121212;
+
+  overflow: hidden;
+
+  position: relative;
+}
+.ag-courses-item_link:hover,
+.ag-courses-item_link:hover .ag-courses-item_date {
+  text-decoration: none;
+  color: #FFF;
+}
+.ag-courses-item_link:hover .ag-courses-item_bg {
+  -webkit-transform: scale(10);
+  -ms-transform: scale(10);
+  transform: scale(10);
+}
+.ag-courses-item_title {
+  min-height: 87px;
+  margin: 0 0 25px;
+
+  overflow: hidden;
+
+  font-weight: bold;
+  font-size: 30px;
+  color: #FFF;
+
+  z-index: 2;
+  position: relative;
+}
+.ag-courses-item_date-box {
+  font-size: 18px;
+  color: #FFF;
+
+  z-index: 2;
+  position: relative;
+}
+.ag-courses-item_date {
+  font-weight: bold;
+  color: #f9b234;
+
+  -webkit-transition: color .5s ease;
+  -o-transition: color .5s ease;
+  transition: color .5s ease
+}
+.ag-courses-item_bg {
+  height: 128px;
+  width: 128px;
+  background-color: #f9b234;
+
+  z-index: 1;
+  position: absolute;
+  top: -75px;
+  right: -75px;
+
+  border-radius: 50%;
+
+  -webkit-transition: all .5s ease;
+  -o-transition: all .5s ease;
+  transition: all .5s ease;
+}
+.ag-courses_item:nth-child(2n) .ag-courses-item_bg {
+  background-color: #3ecd5e;
+}
+.ag-courses_item:nth-child(3n) .ag-courses-item_bg {
+  background-color: #e44002;
+}
+.ag-courses_item:nth-child(4n) .ag-courses-item_bg {
+  background-color: #952aff;
+}
+.ag-courses_item:nth-child(5n) .ag-courses-item_bg {
+  background-color: #cd3e94;
+}
+.ag-courses_item:nth-child(6n) .ag-courses-item_bg {
+  background-color: #4c49ea;
+}
+
+
+
+@media only screen and (max-width: 979px) {
+  .ag-courses_item {
+    -ms-flex-preferred-size: calc(50% - 30px);
+    flex-basis: calc(50% - 30px);
+  }
+  .ag-courses-item_title {
+    font-size: 24px;
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  .ag-format-container {
+    width: 96%;
+  }
+
+}
+@media only screen and (max-width: 639px) {
+  .ag-courses_item {
+    -ms-flex-preferred-size: 100%;
+    flex-basis: 100%;
+  }
+  .ag-courses-item_title {
+    min-height: 72px;
+    line-height: 1;
+
+    font-size: 24px;
+  }
+  .ag-courses-item_link {
+    padding: 22px 40px;
+  }
+  .ag-courses-item_date-box {
+    font-size: 16px;
+  }
+}
+
+
+@import url(https://fonts.googleapis.com/css?family=Lato);
+
+
+#container {
+  background: #333333;
+  color: #e8e8e8;
+  width: 80%;
+  min-height: 100vh;
+  min-width: 20rem;
+  margin: 1em auto;
+  border-radius: 8px;
+  padding: 1.5rem;
+  font-family: "Lato", sans-serif;
+
+  .message {
+    display: flex;
+    flex-direction: horizontal;
+    margin: 1.5rem 0;
+    position: relative;
+
+    .picture {
+      background: #666666;
+      width: 4rem;
+      height: 4rem;
+      border-radius: 50%;
+      margin-right: 2rem;
+      line-height: 4rem;
+      vertical-align: bottom;
+      font-size: 2rem;
+      font-weight: bold;
+      text-align: center;
+    }
+
+    .contents {
+      background: rgb(27.5%, 27.5%, 27.5%);
+      flex: 1;
+      margin-right: calc(4rem - 1rem - 0.5rem);
+      align-self: center;
+      padding: 0.75rem 1rem;
+      border-radius: 4px;
+
+      &::before {
+        content: "";
+        display: block;
+        position: absolute;
+        top: calc(4rem / 2 - 0.75rem / 2);
+        left: calc(4rem + 2rem - 0.75rem / 2);
+        background: rgb(27.5%, 27.5%, 27.5%);
+        width: 0.75rem;
+        height: 0.75rem;
+        transform: rotate(45deg);
+      }
+    }
+  }
+
+  .mine {
+    flex-direction: row-reverse;
+
+    .picture {
+      margin-left: 2rem;
+      margin-right: 0;
+    }
+
+    .contents {
+      margin-right: 0;
+      margin-left: calc(4rem - 1rem - 0.5rem);
+      background: rgb(22.5%, 25%, 27.5%);
+
+      &::before {
+        position: absolute;
+        background: rgb(22.5%, 25%, 27.5%);
+        left: auto;
+        right: calc(4rem + 2rem - 0.75rem / 2);
+      }
+    }
+  }
+}
+
+
+.download-msg-file{
+  margin: 5px;
+}
+
+.bottom-input{
+  height: 3rem;
+  width: 75%;
+  position: absolute;
+  bottom: -60px;
+}
+
+
+
+.file {
+  height: 2rem;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.file > input[type='file'] {
+  display: none
+}
+
+.file > label {
+  font-size: 1rem;
+  font-weight: 300;
+  cursor: pointer;
+  outline: 0;
+  user-select: none;
+  border-color: rgb(216, 216, 216) rgb(209, 209, 209) rgb(186, 186, 186);
+  border-style: solid;
+  border-radius: 4px;
+  border-width: 1px;
+  background-color: hsl(0, 0%, 100%);
+  color: hsl(0, 0%, 29%);
+  /* padding-left: 16px; */
+  /* padding-right: 16px; */
+  /* padding-top: 16px; */
+  /* padding-bottom: 16px; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.file > label:hover {
+  border-color: hsl(0, 0%, 21%);
+}
+
+.file > label:active {
+  background-color: hsl(0, 0%, 96%);
+}
+
+.file > label > i {
+  padding-right: 5px;
+}
+
+.file--upload > label {
+  color: hsl(204, 86%, 53%);
+  border-color: hsl(204, 86%, 53%);
+}
+
+.file--upload > label:hover {
+  border-color: hsl(204, 86%, 53%);
+  background-color: hsl(204, 86%, 96%);
+}
+
+.file--upload > label:active {
+  background-color: hsl(204, 86%, 91%);
+}
+
+.file--uploading > label {
+  color: hsl(48, 100%, 67%);
+  border-color: hsl(48, 100%, 67%);
+}
+
+.file--uploading > label > i {
+  animation: pulse 5s infinite;
+}
+
+.file--uploading > label:hover {
+  border-color: hsl(48, 100%, 67%);
+  background-color: hsl(48, 100%, 96%);
+}
+
+.file--uploading > label:active {
+  background-color: hsl(48, 100%, 91%);
+}
