--- a/client/src/Pages/Home/home.css
+++ b/client/src/Pages/Home/home.css
@@ -72,10 +72,25 @@ button{
 }
 
 .full-section{
-    height: 95vh;
+    min-height: 95vh;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
 }
 
+.feature-box{
+/* 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap; */
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+}
+
+.single-home-feature{
+  /* width: 300px; */
+  /* height: 150px; */
+  margin: 10px;
+}
