--- a/client/src/App.css
+++ b/client/src/App.css
@@ -39,6 +39,7 @@
 .complete-website{
   overflow-x: hidden;
   min-height: 86vh;
+  margin: 20px;
   /* width: 70%; */
   /* display: flex; */
   /* justify-content: center; */
