--- a/client/src/Pages/Groups/group.css
+++ b/client/src/Pages/Groups/group.css
@@ -368,9 +368,9 @@ div{
 
 .bottom-input{
   height: 3rem;
-  width: 75%;
+  width: 70%;
   position: absolute;
-  bottom: -60px;
+  bottom: -22%;
 }
 
 
